apps/dashboard/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dashboard-svc
  namespace: pool-prospect
spec:
  selector:
    app: dashboard
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
