apps/dashboard/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashboard-ingress
  namespace: pool-prospect
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: pools.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dashboard-svc
                port:
                  number: 80
